Bundle JAXB into Gradle distribution and use it on Java 9 and above
In order to use S3 backed artifact repositories, it was previously
required to add `--add-modules java.xml.bind` to `org.gradle.jvmargs`
when running on Java 9 and above. Since Java 11 no longer contains the
`java.xml.bind` module, Gradle now bundles JAXB 2.3.1
(`com.sun.xml.bind:jaxb-impl`) and uses it on Java 9 and above.